<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".ui.AddNoteFragment">

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:hint="@string/title"
        android:inputType="textMultiLine"
        android:maxLines="2"
        android:padding="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/body"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title"
        android:layout_marginTop="5dp"
        android:gravity="top"
        android:hint="@string/note"
        android:inputType="textMultiLine"
        android:padding="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:clickable="true"
        android:contentDescription="@string/save_item_click"
        android:focusable="true"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_done_24" />

</RelativeLayout>